--- a/Case0_CSS_Ani_Vari/bom/basic.css
+++ b/Case0_CSS_Ani_Vari/bom/basic.css
@@ -41,6 +41,8 @@ div.grid2 {
 
 div.grid3 {
 	background-color: blue;
+	animation-name: ani_grid3;
+    animation-duration: 4s;
 }
 
 div.grid4 {
@@ -60,6 +62,11 @@ div.grid4 {
 	60% {background-color: red;}
 	80% {background-color: blue;}
 	100% {background-color: green;}
+}
+
+@keyframes ani_grid3 {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
 }
 
 .fas {
